--- a/popup.html
+++ b/popup.html
@@ -7,11 +7,12 @@
         <div id="custom">     
         </div>
 		<select id = "langselect">
-			<option value = "spanish">Spanish</option>
+			<option value = "eng">English</option>
+			<option value = "spa">Spanish</option>
 			<option value = "cmn">Chinese(Mandarin)</option>
 		</select>
         <div id = "fromdict">
-            Merriam-Webster definition: 
+            Glosbe definition: 
         </div>
         <form>
             Definition: <input type="text" name="userdef"><br>
