--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     <div class = "row-fluid">
       <div class = "col-lg-2">     
         <h2>Word:</h2>
-        <p id = "custom"></p>
+        <p id = "wordContainer"></p>
       </div>
       
       <div class = "col-lg-2">
