getting basic login stuff set up

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
   <div class ="container-fluid">
   
     <div class = "hero-unit">
+    <h6 class ="text-right" id = "userContainer">Hi there!</h6>
     <h1 class ="text-center">Provenance</h1>
     </div>
     
